--- a/source/_posts/纪念日.md
+++ b/source/_posts/纪念日.md
@@ -2,21 +2,92 @@
 title: 纪念日
 date: 2020-12-2 23:27:21
 tags: 
-image: /2020/06/28/start/we.jpg
+image: /2020/12/2/纪念日/291607005378_.pic.jpg
 ---
 
-{% meting "26090100" "netease" "song" "autoplay" "mutex:false" %}
+{% meting "228755" "netease" "song" "autoplay" "mutex:false" %}
 
 
+好早之前承诺，说以后我来维护这个网站，但是从那之后一个文章都没写，这次趁今天这个纪念日，写上一篇。二位不要打我。 🤣
 
 
-今天咱家的博客就正式开通了，这里只有咱家仨。
+这一转眼32年了，好快呀。快到我都不感想。不过遥想当年李老师那也是一朵花。
 
-看了看，咱仨真的没有合照呀，下次咱们仨拍一个。
+![](311607005511_.pic.jpg)
 
-这文章你俩都不会写，我来写，这是咱们在网上的家。
+多年轻，多好看，还有点儿婴儿肥。
 
-我一直陪着你俩。
+![](411607005864_.pic.jpg)
 
-❤️️❤️️❤️️
+俺爹，那时候其实看起来就胖，不过还有点儿那种好男儿志在四方的感觉。
+
+![](501607007060_.pic.jpg)
+
+![](511607007120_.pic.jpg)。
+
+后来俩人在李英的介绍下，相识，相恋，决定携手走过一生。
+
+俩人我觉得也是郎才女貌，你看看
+
+![](291607005378_.pic.jpg)
+
+大姑娘和傻小子，哈哈哈。
+
+![](371607005516_.pic.jpg)
+
+正好俺爸那时候是在北京多，俩人就在北京逛，玩儿，也挺好的。
+
+再后来，就有我了。
+
+![](431607005866_.pic.jpg)
+
+我的出生由二人世界变成了三口之家，生活中充斥了更多的鸡毛蒜皮的事儿。
+
+![](381607005517_.pic.jpg)
+
+不过如果没有这些鸡毛蒜皮的事儿，那还能叫生活么。
+
+![](321607005512_.pic.jpg)
+
+我记得小时候，俩人好吵架，但是总体来说过得也还是开心吧。
+
+![](391607005862_.pic.jpg)
+
+其实很多时候都是俺妈，脾气大，好嘟噜，也是个性要强。
+
+俺爸呢，我小时候脾气还算好的。
+
+![](401607005863_.pic.jpg)
+
+![](421607005865_.pic.jpg)
+
+吵吵架，拌拌嘴。生活中的一个调剂品，发泄方式罢了。不用过分在意。
+
+![](461607005869_.pic.jpg)
+
+其实日子就是这么一点儿点儿的过来了。也经历过 缺钱 借钱 还债 的时候。
+
+俩人也没有因为这种事儿责怪埋怨对方，还是这么一直的走下去了。
+
+![](441607005867_.pic.jpg)
+
+总的来说，还是开心的多，不开心的少。这就中了。
+
+希望二位今天的纪念日过的快乐。少了我这个电灯泡，也能开心 🤣
+
+![](461607005869_.pic.jpg)
+
+最后，我也想借着这个机会，谢谢 二位。
+
+辛苦了，为这个家付出这么多。
+
+谢谢爸，谢谢妈。
+
+希望你们身体健康，生活幸福。
+
+儿子 东。
+
+![](481607006146_.pic.jpg)
+
+
 
